--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <!---button----->
-    <a href="https://www.google.com">
+    <a href="mailto:risalea.22@gmail.com">
       <button type="button" class="btn btn-outline-light btn-lg">
         <!-- <img class="resume-img" src="images/resume-img-l.png" alt=""> -->
         Hire me
@@ -51,27 +51,54 @@
     <!---about section----->
     <div class="about-sec">
       <h1 class="about-head"><b>About me</b></h1>
-      <p class="about-discription">I’am a UI/UX designer and
-        Python devoloper who serious
-        passion for Programing,
-        Designing and New technologies
+      <p class="about-discription">I am a Python Developer and UI Designer with a
+        serious passion for programming, designing, and new technology and I am always
+        eager to learn new skills and technologies. I am confident in my ability to
+        create and implement beautiful, user-friendly designs and efficient,
+        high-performing code. I strive to stay up-to-date with the latest advancements
+        in my field and am dedicated to delivering high-quality work.
       </p>
     </div>
 
     <!---project section----->
+    <h1 class="project_head"><b>My works</b></h1>
+
     <div class="projects">
+
       <div class="projects_row">
         <img class="projects_gif" src="gif/passwordmanager_gif.gif" alt="">
-        <h2>Password manager</h2>
-        <p class="projects_discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+        <h2 class="projects_head">Password manager</h2>
+        <p class="projects_discription">My password manager application allows
+          users to securely store their login IDs and passwords on their own device.
+          The application also includes a password generator tool to create strong,
+          random passwords. It helps users to organize their login information and
+          protect them from hackers.
+        </p>
+        <a class="project_files" href="python projects/password manager.zip" Download>Download file</a>
       </div>
 
       <div class="projects_row">
         <img class="projects_gif" src="gif/morsecode_gif.gif" alt="">
-        <h2>Morsecode converter</h2>
-        <p class="projects_discription">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+        <h2 class="projects_head">Morsecode converter</h2>
+        <p class="projects_discription">My Morse code converter application allows
+           users to easily translate text into Morse code.The application includes a
+           copy to clipboard feature,allowing users to easily share or save the translated
+           code. It's user-friendly and easy to use, making it perfect for beginners
+           and experts alike. It's a handy tool for sending secret messages, learning Morse code and more.
+        </p>
+        <a class="project_files" href="python projects/morse code converter.zip" Download>Download file</a>
+      </div>
+
+      <div class="projects_row">
+        <img class="projects_gif" src="gif/bill divider.gif" alt="">
+        <h2 class="projects_head">Bill divider</h2>
+        <p class="projects_discription">My bill divide application helps users easily split
+          expenses with friends and family. Users can input the total bill amount and
+          number of people splitting the bill. The application calculates and displays the
+          individual amounts owed. Users can also add tips to the bill. It helps to avoid any confusion
+          and makes it easy to split bills with friends and family.
+        </p>
+        <a class="project_files" href="python projects/bill divider.zip" Download>Download file</a>
       </div>
     </div>
 
